src/objects/Offer_Code__c.object
<CustomObject>
    <description>Used by DNA Inside/Telesales Teams to associate Promotional Codes with Tasks and Campaigns</description>
    <fields>
        <fullName>Campaign_Related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>DNA Campaign, In-Person or Virtual Event Campaign</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Offer Codes</relationshipLabel>
        <relationshipName>Offer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code_Status__c</fullName>
        <formula>IF(  Start_Date__c &gt; TODAY(), &quot;Planned&quot;, if( Expiration_Date__c  &gt;=
TODAY() , &quot;Valid Offer Code&quot;, &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Code Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code_Type__c</fullName>
        <label>Offer Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuantityLimit__c</fullName>
        <description>Used for US/CA Implants order solution where approval levels are indicated on order line level (TFUS-4410)</description>
        <label>Quantity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_by_Country_SBU__c</fullName>
        <label>Used by Country/SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA- DNA TeleSales Core</fullName>
                </value>
                <value>
                    <fullName>USA - DNA TeleSales Prosthetics</fullName>
                </value>
                <value>
                    <fullName>USA - Endo Maillefer</fullName>
                </value>
                <value>
                    <fullName>CAN - DNA Inside Sales</fullName>
                </value>
                <value>
                    <fullName>USA - Inside Sales ENDO</fullName>
                </value>
                <value>
                    <fullName>USA - Implants</fullName>
                </value>
                <value>
                    <fullName>USA - Sales</fullName>
                </value>
                <value>
                    <fullName>Iberia - Ambassador</fullName>
                </value>
                <value>
                    <fullName>Iberia - Telesales</fullName>
                </value>
                <value>
                    <fullName>Germany - Lab</fullName>
                </value>
                <value>
                    <fullName>Germany - PRE</fullName>
                </value>
                <value>
                    <fullName>Austria - Lab</fullName>
                </value>
                <value>
                    <fullName>​​​​​​Austria - PRE</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy - indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Offer_Codes</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Offer_Code_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2021</value>
        </filters>
        <label>All Offer Codes</label>
    </listViews>
    <listViews>
        <fullName>Offer_Codes_Indonesia</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Used_by_Country_SBU__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <label>Offer Codes Indonesia</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IDN_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Offer Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>